Fixed website not working on Firefox

--- a/style.css
+++ b/style.css
@@ -36,8 +36,6 @@ body {
 
 
 .root {
-	position: absolute;
-	width: 100%;
 	height: 100%;
 }
 
